v1.1.0/modules/schema/pages/class/ICCPProvidedPoint.adoc
= `ICCPProvidedPoint`
:toclevels: 4


+++The IdentifiedObject.name attribute must have a value.  The name attribute shall be used as the DataValue name used for the exchange.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ICCPProvidedPoint`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`]
*** *`ICCPProvidedPoint`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<accessPriviledge,`accessPriviledge`>>
//| [[slots_table.accessPriviledge]]<<accessPriviledge,`accessPriviledge`>>
| 0..1 +
xref::enumeration/ICCPAccessPrivilegeKind.adoc[`ICCPAccessPrivilegeKind`]
| +++Provides information regarding the access privileges allowed to the ICCP Point.+++
| _n/a_

| <<pointQuality,`pointQuality`>>
//| [[slots_table.pointQuality]]<<pointQuality,`pointQuality`>>
| 0..1 +
xref::enumeration/ICCPQualityKind.adoc[`ICCPQualityKind`]
| +++Specifies the type of ICCP quality that will be conveyed as part of the ICCP Point.+++
| _n/a_

| <<pointType,`pointType`>>
//| [[slots_table.pointType]]<<pointType,`pointType`>>
| 0..1 +
xref::enumeration/ICCPPointKind.adoc[`ICCPPointKind`]
| +++Indicates the ICCP Point type that is to be conveyed.

A CIM AccumlatorValue  shall be mapped to an ICCP real.
A CIM...+++
| _n/a_

| <<scope,`scope`>>
//| [[slots_table.scope]]<<scope,`scope`>>
| 0..1 +
xref::enumeration/ICCPScopeKind.adoc[`ICCPScopeKind`]
| +++Indicates if the Point is global scoped (e.g. VCC) or accessible only to the Bilateral table peer (e.g. ICC).+++
| _n/a_

| <<BilateralExchangeActor,`BilateralExchangeActor`>>
//| [[slots_table.BilateralExchangeActor]]<<BilateralExchangeActor,`BilateralExchangeActor`>>
| 1 +
xref::class/BilateralExchangeActor.adoc[`BilateralExchangeActor`]
| +++Remote peer that will receive ICCP information in a Bilateral table.+++
| xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`]

| <<IOPoint,`IOPoint`>>
//| [[slots_table.IOPoint]]<<IOPoint,`IOPoint`>>
| 0..1 +
xref::class/IOPoint.adoc[`IOPoint`]
| +++Measurement or control for the bilateral ICCP point.+++
| xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#accessPriviledge]
=== `accessPriviledge`
+++Provides information regarding the access privileges allowed to the ICCP Point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ICCPProvidedPoint.accessPriviledge`
| Cardinality
| 0..1
| Type
| xref::enumeration/ICCPAccessPrivilegeKind.adoc[`ICCPAccessPrivilegeKind`]


|===

////
[.text-left]
--
<<slots_table.accessPriviledge,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#BilateralExchangeActor]
=== `BilateralExchangeActor`
+++Remote peer that will receive ICCP information in a Bilateral table.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProvidedBilateralPoint.BilateralExchangeActor`
| Cardinality
| 1
| Type
| xref::class/BilateralExchangeActor.adoc[`BilateralExchangeActor`]

| Inherited from
| xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`]


|===

////
[.text-left]
--
<<slots_table.BilateralExchangeActor,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#IOPoint]
=== `IOPoint`
+++Measurement or control for the bilateral ICCP point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProvidedBilateralPoint.IOPoint`
| Cardinality
| 0..1
| Type
| xref::class/IOPoint.adoc[`IOPoint`]

| Inherited from
| xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`]


|===

////
[.text-left]
--
<<slots_table.IOPoint,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pointQuality]
=== `pointQuality`
+++Specifies the type of ICCP quality that will be conveyed as part of the ICCP Point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ICCPProvidedPoint.pointQuality`
| Cardinality
| 0..1
| Type
| xref::enumeration/ICCPQualityKind.adoc[`ICCPQualityKind`]


|===

////
[.text-left]
--
<<slots_table.pointQuality,&#10548;>>
--
////


//[discrete]
[#pointType]
=== `pointType`
+++Indicates the ICCP Point type that is to be conveyed.

A CIM AccumlatorValue  shall be mapped to an ICCP real.
A CIM AnalogValue shall be mapped to an ICCP real.
A CIM DiscreteValue shall be mapped to either an ICCP real, state, stateSupplemental, or either protection event type.
A CIM StringMeasurementValue does not have a standardized mapping.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ICCPProvidedPoint.pointType`
| Cardinality
| 0..1
| Type
| xref::enumeration/ICCPPointKind.adoc[`ICCPPointKind`]


|===

////
[.text-left]
--
<<slots_table.pointType,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#scope]
=== `scope`
+++Indicates if the Point is global scoped (e.g. VCC) or accessible only to the Bilateral table peer (e.g. ICC).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ICCPProvidedPoint.scope`
| Cardinality
| 0..1
| Type
| xref::enumeration/ICCPScopeKind.adoc[`ICCPScopeKind`]


|===

////
[.text-left]
--
<<slots_table.scope,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
